--- a/sql/Makefile
+++ b/sql/Makefile
@@ -4,7 +4,7 @@ backup:
 	mysqldump -u root -p sites > sites.sql
 
 restore:
-	mysql -u root -p < webwarecl.sql
-	mysql -u root -p < webware_cms.sql
-	mysql -u root -p < sites.sql
+	mysql -u root -p webwarecl < webwarecl.sql
+	mysql -u root -p webware_cms < webware_cms.sql
+	mysql -u root -p sites < sites.sql
 
